wiyci-web/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__projects__projects_empty.snap
---
source: wiyci-web/tests/snapshot_tests/projects.rs
description: "GET http://localhost/projects"
---
HTTP/1.1 200 OK
content-type: text/html; charset=utf-8
x-content-type-options: nosniff
content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
x-frame-options: DENY
content-length: 1183

<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="utf-8">
	<meta name="viewport" content="width=device-width, initial-scale=1">
	<title>Projects - wiyci</title>
	<link rel="stylesheet" href="/static/main.[     hash     ].css">
</head>
<body>

<header class="header"><div class="container">
<nav class="navbar">
	<div class="navbar-brand">
		<a href="/"><strong title="The World Is Your CI">wiyci</strong></a>
	</div>
	<ul class="navbar-menu"><li class="navbar-item is-active"><a href="/projects" aria-current="true">Projects</a></li>
	</ul>
</nav>
</div></header>

<main class="main"><div class="container">

<h1>Projects</h1>


<form action="/projects" method="GET" class="search-form">
	<input type="text" name="search" placeholder="project name, e.g. &quot;firefox&quot;" value="">
	<input type="submit" value="Go">
</form>


<p>No projects found</p>



</div></main>

<footer class="footer"><div class="container">
<div class="columns columns--justify">
	<div>Copyright (C) Dmitry Marakasov</div>
	<div>GitHub <a href="https://github.com/AMDmi3/wiyci">repository</a>, <a href="https://github.com/AMDmi3/wiyci/issues">issues</a></div>
</div>
</div></footer>

</body>
</html>
